Iniciado proyecto vue.js

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,28 @@ build/
 
 ### VS Code ###
 .vscode/
+
+####FRONTEND VUE.JS########
+frontend/.DS_Store
+frontend/node_modules
+/dist
+
+
+# local env files
+frontend/.env.local
+frontend/.env.*.local
+
+# Log files
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+
+# Editor directories and files
+frontend/.idea
+frontend/.vscode
+frontend/*.suo
+frontend/*.ntvs*
+frontend/*.njsproj
+frontend/*.sln
+frontend/*.sw?
